--- a/packages/chronicle/src/themes/paper/Page.module.css
+++ b/packages/chronicle/src/themes/paper/Page.module.css
@@ -1,9 +1,3 @@
-.page {
-  height: 100%;
-  overflow-y: auto;
-  background: var(--rs-color-background-neutral-primary);
-}
-
 .main {
   flex: 1;
   max-width: 1024px;
@@ -11,15 +5,16 @@
 }
 
 .navbar {
-  padding: var(--rs-space-1) 0;
+  height: 40px;
+  padding: var(--rs-space-3) 0;
   border-bottom: 1px solid var(--rs-color-border-base-primary);
-  flex-shrink: 0;
   justify-content: space-between;
   width: 100%;
-  position: sticky;
+  position: fixed;
   top: 0;
   background: var(--rs-color-background-neutral-primary);
   z-index: 10;
+  max-width: 1024px;
 }
 
 .navLeft {
@@ -78,7 +73,7 @@
 .article {
   flex: 1;
   min-width: 0;
-  margin-top: var(--rs-space-7);
+  margin-top: 72px;
   padding: 0 var(--rs-space-7);
 }
 
