--- a/packages/chronicle/src/themes/paper/ReadingProgress.module.css
+++ b/packages/chronicle/src/themes/paper/ReadingProgress.module.css
@@ -1,10 +1,8 @@
 .ruler {
   width: 200px;
-  flex-shrink: 0;
-  position: sticky;
-  top: 0;
-  height: 100%;
-  padding-top: 100px;
+  position: fixed;
+  right: 0;
+  top: 100px;
 }
 
 .nav {
